--- a/package.json
+++ b/package.json
@@ -2,21 +2,27 @@
   "name": "ecommerce-backend-api",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-mongodb-session": "^3.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "dotenv-safe": "^8.2.0",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
+    "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.1",
+    "mongodb": "^5.6.0",
     "mongoose": "^7.3.1",
     "multer": "^1.4.5-lts.1",
+    "nodemon": "^2.0.22",
     "validator": "^13.9.0"
   }
 }
